# SymX

./: .buildinfo  .gitignore  CMakeLists.txt  CNAME  README.md  api_scalar_vector_matrix.html  compilation.html  compiled_in_loop.html  diagram.html  examples.html  fem_integration.html  genindex.html  hello_world.html  index.html  mapped_workspace.html  newtons_method.html  objects.inv  search.html  searchindex.js  second_order_optimization.html  setup.html  symbol_data.html  symbols.html
.doctrees/: api_scalar_vector_matrix.doctree  compilation.doctree  compiled_in_loop.doctree  diagram.doctree  environment.pickle  examples.doctree  fem_integration.doctree  hello_world.doctree  index.doctree  mapped_workspace.doctree  newtons_method.doctree  second_order_optimization.doctree  setup.doctree  symbol_data.doctree  symbols.doctree
.github/workflows/: ci.yml
_downloads/5d1fd4a05865bf0510145fdf24363e55/: rubber_extrusion.cpp
_sources/: compilation.md.txt  index.md.txt  newtons_method.md.txt  symbols.md.txt
docs/source/: api_scalar_vector_matrix.md  compilation.md  compiled_in_loop.md  conf.py  diagram.md  examples.md  fem_integration.md  hello_world.md  mapped_workspace.md  second_order_optimization.md  setup.md  symbol_data.md  symbols.md
examples/: CMakeLists.txt  NeoHookean.cpp  dynamic_elasticity_with_contact.cpp  elasticity_potentials.h  examples_main.cpp  examples_main.h  examples_utils.h  hello_world.cpp  triangle_mesh_area.cpp  xpbd_cloth.cpp
examples/res/: bunny.vtk
symx/src/compile/: Compilation.cpp
tests/: CMakeLists.txt  sympy_derivatives.cpp  sympy_derivatives.h  test_compilation.cpp  test_diagnostics.cpp  test_diff.cpp  test_global_potential.cpp  test_loops.cpp  test_mapped_workspace_make.cpp  test_matrix.cpp  test_newton_method.cpp  test_scalar.cpp  test_user_api.cpp  test_vector.cpp  utils.h
